# rules_jvm

scala/gazelle/: BUILD.bazel  configure.go  generate.go  generate_test.go  lang.go  resolve.go
scala/gazelle/javaconfig/: BUILD.bazel
scala/gazelle/private/bazel/: BUILD.bazel
scala/gazelle/private/java/: BUILD.bazel  package.go
scala/gazelle/private/javaparser/: BUILD.bazel  javaparser.go
scala/gazelle/private/javaparser/proto/gazelle/java/javaparser/v0/: BUILD.bazel
scala/gazelle/private/logconfig/: BUILD.bazel
scala/gazelle/private/maven/: BUILD.bazel  resolver.go
scala/gazelle/private/maven/multiset/: BUILD.bazel
scala/gazelle/private/proto/: BUILD.bazel
scala/gazelle/private/servermanager/: BUILD.bazel  servermanager.go
scala/gazelle/private/sorted_set/: BUILD.bazel
scala/gazelle/private/testutil/reset_zerolog_timestamps/: BUILD.bazel
scala/src/com/github/bazel_contrib/contrib_rules_jvm/javaparser/generators/: BUILD.bazel
