load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "servermanager",
    srcs = ["servermanager.go"],
    data = ["//java/src/com/github/bazel_contrib/contrib_rules_jvm/javaparser/generators:Main"],
    importpath = "github.com/bazel-contrib/rules_jvm/scala/gazelle/private/servermanager",
    visibility = ["//scala/gazelle:__subpackages__"],
    deps = [
        "//scala/gazelle/private/bazel",
        "//scala/gazelle/private/javaparser/proto/gazelle/java/javaparser/v0:javaparser",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
