load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sorted_set",
    srcs = ["btreeset.go"],
    importpath = "github.com/bazel-contrib/rules_jvm/scala/gazelle/private/sorted_set",
    visibility = ["//scala/gazelle:__subpackages__"],
    deps = ["@com_github_google_btree//:btree"],
)

go_test(
    name = "sorted_set_test",
    srcs = ["btreeset_test.go"],
    deps = [
        "//java/gazelle/private/sorted_set",
        "@com_github_google_uuid//:uuid",
    ],
)
